# cv-recruiter-2

./: .gitignore  pyproject.toml
src/analyser/database/: tiny_db.py
src/analyser/models/: job.py  resum.py
